--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
     "dotenv": "^10.0.0",
+    "element-ui": "^2.15.6",
     "firebase": "^9.5.0",
     "nuxt": "^2.15.7",
     "simple-vue-validator": "^0.16.0",
