--- a/env/.env
+++ b/env/.env
@@ -1,2 +1,10 @@
 BASE_APP=/
 FENV=env
+
+API_KEY='AIzaSyAE37kRYAppsWbh_x91BaccxaQkus1yr2o'
+AUTH_DOMAIN='books-8e212.firebaseapp.com'
+PROJECT_ID='books-8e212'
+STORAGE_BUCKET='books-8e212.appspot.com'
+MESSAGING='199555402833'
+APP_ID='1:199555402833:web:cd5842cf5d987c5b9cbc70'
+DATABASE_URL='https://books-8e212-default-rtdb.europe-west1.firebasedatabase.app'
