--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/firebase": "^8.1.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "algoliasearch": "^4.11.0",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
